@startuml
skinparam classAttributeIconSize 0
class Solution {
    + {static} main(args : String[])
    + {static} start(scanner : Scanner) : String
    ~ {static} getDataFromFile(scanner : Scanner) : List<String>
    ~ {static} constructResident(line : String) : Resident
    ~ {static} getHouseholds(residents : List<Resident>) : SortedMap<Address, List<Resident>>
    ~ {static} getHouseholdsDisplay(households : SortedMap<Address, List<Resident>>) : String
}
class Address implements Comparable {
    - street : String
    - apartment : String
    - city : String
    - state : String

    + Address(street : String, city : String, state : String)
    + Address(address : Address)
    + equals(other : Object) : boolean
    + hashCode() : integer
    + toString() : String
    + compareTo(other : Address) : integer
}

class Resident implements Comparable {
    - firstName : String
    - lastName : String
    - address : Address
    - age : integer

    + Resident(firstName : String, lastName : String,
                address : Address, age : integer)
    + getAddress() : Address
    + getAge() : integer
    + compareTo(other : Resident) : integer
    + equals(other : Object) : boolean
    + hashCode() : integer
    + toString() : String
}

Address -right-* Resident
Address <.. Solution
Resident <.. Solution
@enduml